# spellchecker

./: CMakeLists.txt  README.md  main.qbs  spellcheker.qbs
doc/api/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.qbs
doc/api/pages/: main.markdown
include/spellchecker/: spellchecker.h
src/: CMakeLists.txt  spellchecker.cpp  spellchecker.h  spellchecker.qbs  spellcheckerglobal.h
tests/auto/: CMakeLists.txt  main.qbs
tests/benchmarks/: CMakeLists.txt
tests/manual/: CMakeLists.txt  main.qbs  manual.qbs
tests/manual/tst_spellchecker/: CMakeLists.txt  main.cpp  tst_spellchecker.qbs
